--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </script>
     </head>
     <body>
+        <img src="./trichordal-array.png" alt="trichordal array"> 
         <button onclick={handleNewSequence()}>new sequence</button>
         <button onclick={handlePause()}>pause</button>
         <button onclick={handleResume()}>resume</button>
